1.0-devel
======================

 * Updated requirements to CMFQuickinstaller 1.5/cvs,
   [tiran]

 * Starting to remove the switch* and migrate* external methods.
   [tiran]

 * Fixed default view of ATFolder. Pointing to view again makes a loop and
   raises a hard to debug exception because TemplateMixin is trying to use
   itself as default view which doesn't work.
   [tiran]

 * FTests: install kupu and epoz when available. Moved function test suite to
   ftests/.
   [tiran]

 * Fixed [ 1157812 ] ival/vcal action icons not available
   [tiran]

 * Fixed ATTopic to use atct_edit like all other ATCT types.
   [tiran]

 * Added ERRATA.txt which covers known issues.
   [tiran]

 * Added integration tests for discussions.
   [tiran]

 * Ported topic migration and criteria enhancements + additional criteria
   from ender topic branch. Thx to Alec Mitchell for his great work! The new
   criteria are: ATSelectionCriterion, ATDateRangeCriterion,
   ATReferenceCriterion and ATBooleanCriterion.
   [allecm, tiran]

 * Changed archetype names of criteria and removed the AT prefix.
   [tiran]

 * Added unit tests for criteria and ATTopic.
   [allecm, tiran]

 * Added translate tab when LinguaPlone is available at installation or
   reinstallation time.
   [tiran]

 * Added mini scale with 200x200.
   [tiran]

 * Added integration tests for view and edit templates.
   [tiran]

 * I made major changes to the unit test suite. Also I've added more field
   tests, some important interface tests and cleaner and better base classes
   for tests.
   [tiran]

 * prepare ATFolder for use with TemplateMixin, use generic /view instead of 
   /folder_listing as default and immediate view.
   [yenzenz]

 * Changed the way ConstrainTypes gets mixed in: Now ATCT is always subclassing
   folders from the ConstrainTypes class and the schema is always in the folder
   schema. Before this change ppl couldn't rely on the api. When the feature